# Robot5A-TB

./: .bashrc  .gitignore  Dockerfile  Ethernet_connection_ros2.sh  README.md  all_nodes_launch.sh  aruco_log.csv  build.sh  clean.sh  commands_build_humble.sh  commands_build_humble.txt  dosh_run.sh  doshrc  gain_rights.sh  gain_user_acess.sh  hserial_serial_node.sh  jbuild.sh  opencv_install.txt  pi_ssh_conection.sh  pi_ssh_connection_hotspot.sh  run_detector.sh  run_detector2cam.sh  see_rqt.sh  start_automatic_test.sh  tempCodeRunnerFile.sh  xlaunch.sh  zlannch_servoing2cam.sh  zlaunch_servoing.sh
code_imane/: PILO2.py  command.txt  example_command.txt
code_imane/PILOT/: PILOT.ino
code_imane/PILOT2/: PILOT2.ino
src/camera_orientation/: camera_config.json  config.py  main.py  sts3032_controller.py  sts3032_gui.py
src/chariot_control/: commands.txt  package.xml  setup.cfg  setup.py
src/chariot_control/chariot_control/: commands.txt  commands_executor_node.py  commands_node.py  serial_node.py
src/chariot_control/launch/: chariot_control_launch.py
src/chariot_control/logs/: aruco_log.csv  aruco_log_V100_LONG.csv  aruco_log_V240_THRESHOLD.csv  aruco_log_face_550h.csv  aruco_log_face_650h.csv  aruco_log_face_700h.csv  aruco_log_side_500h.csv
src/chariot_control/logs_processed/: aruco_log_average_V265_NO_TRHESHOLD.csv  aruco_log_face_650h_average.csv
src/chariot_control/script/: data_average.py  data_process.py
src/robot_control_tb/: CMakeLists.txt  package.xml
src/robot_control_tb/config/: aruco_to_link.yaml
src/robot_control_tb/launch/: visual_control.launch.py  visual_sim.launch.py
src/robot_control_tb/src/: arm_state_listener.cpp  joint_state_bridge.cpp  moveit_control_gui.cpp  visual_joint_state_publisher.cpp
src/robot_description_tb/: CMakeLists.txt  package.xml
src/robot_description_tb/config/: controllers.yaml
src/robot_description_tb/urdf/: r5a_v_ros.urdf.xacro
src/robot_hardware_interface/: CMakeLists.txt  package.xml  slush_engine_hardware.xml
src/robot_hardware_interface/include/robot_hardware_interface/: SlushEngineHardware.hpp
src/robot_hardware_interface/src/: SlushEngineHardware.cpp
src/robot_moveit_config_tb/: CMakeLists.txt  package.xml
src/robot_moveit_config_tb/config/: armr5.ros2_control.xacro  armr5.srdf  armr5.urdf.xacro  joint_limits.yaml  moveit.rviz  ros2_controllers.yaml
src/robot_state/: CMakeLists.txt  package.xml
src/robot_state/launch/: robot_state_publisher.launch.py
src/robot_state/urdf/: robot_description.urdf
src/robot_visual/: CMakeLists.txt  package.xml  stereo_evaluation_results.yaml
src/robot_visual/config/: camera_1_calibration.yaml  camera_2_calibration.yaml  camera_transform.yaml  rename_camera_files.sh  transform.yaml
src/robot_visual/config_ancienne_camera/: camera_1_calibration.yaml  camera_1_calibration_0_rotation.yaml  camera_1_calibration_1_rotation.yaml  camera_1_calibration_2_rotation.yaml  camera_1_calibration_2_rotationV2.yaml  camera_2_calibration.yaml  camera_2_calibration_1_rotation.yaml  camera_2_calibration_2_rotation.yaml  camera_2_calibration_2_rotationV2.yaml  stereo_calibration_0_rotation.yaml  stereo_calibration_1_rotation.yaml  stereo_calibration_2_rotation.yaml  stereo_calibration_2_rotationV2.yaml
src/robot_visual/logs/: transform_log.csv
src/robot_visual/scripts/: calibration_charuco_recording.py  calibration_charuco_run.py  calibration_charuco_script.py  calibration_charuco_script_exemple.py  calibration_charuco_set_axis.py  calibration_charuco_set_axis2.py  calibration_charuco_set_axis_recording.py  calibration_full_charuco.py  calibration_intrinsec_charuco.py  calibration_recording.py  calibration_recording_stereo.py  config_charuco.py  extrinsic_calibration_recording.py  extrinsic_calibration_script.py  intrinsic_calibration_recording.py  intrinsic_calibration_script.py  rapport_eval_intrinsec.py  remove_distortion.py  requirements.txt  visualize_traj.py
src/robot_visual/src/: aruco_detector_double.cpp  aruco_detector_single.cpp  aruco_displacement.cpp  camera_test_node.cpp  transform_logger.cpp
src/robot_visual_FINALE/: CMakeLists.txt  package.xml
src/robot_visual_FINALE/config/: camera_2_calibration_0_rotation.yaml  stereo_calibration.yaml  stereo_calibration.yaml.backup
src/robot_visual_FINALE/scripts/: calibration_charuco_recording.py  calibration_recording_stereo.py  calibration_recording_stereo_initial.py  calibration_stereo_coplanaire.py  calibration_stereo_non-coplanaire.py  config_charuco.py  rapport_eval_stereo.py  recording.py  test.py
src/robot_visual_FINALE/src/: camera_test_node.cpp  visual_joint_state_publisher.cpp
src/slush_engine_communication/: package.xml  setup.cfg  setup.py
src/slush_engine_communication/RPi/: GPIO.py
src/slush_engine_communication/config/: joint_commands.txt
src/slush_engine_communication/data_analysis/logs/: joint_sync_log.csv
src/slush_engine_communication/launch/: joint_sync_moveit.launch.py
src/slush_engine_communication/scripts/: analyse_joint.py  simulate_trajectory.py  single_motor_test.py  slush_test.py  trajectory.py  visualize_chain.py
src/slush_engine_communication/slush_engine_communication/: joint_sync_moveit_node.py  joint_syns_moveit_node.py  slush_node.py  steps_per_radian_node.py
src/slush_engine_communication/smbus2/: __init__.py  smbus2.py
src/slush_engine_communication/spidev/: __init__.py  spidev.py
