<?xml version="1.0"?>
<package format="3">
  <name>slush_engine_communication</name>
  <version>0.0.1</version>
  <description>ROS 2 node for SlushEngine communication</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-slush</exec_depend> <!-- Custom dependency -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>